--- a/main.css
+++ b/main.css
@@ -1638,6 +1638,11 @@ input[type="submit"] {
         margin-left: 0;
         padding: 0 1em;
     }
+
+    .sv-decoration-log-out-icon p {
+        margin: 0;
+    }
+    
     .loginpage #standardLoginSubmit div .bvLoginGroup {
         width: 100%;
         margin-right: 0;
