--- a/carousel.css
+++ b/carousel.css
@@ -1,3 +1,21 @@
+/*
+=========================================================
+CAROUSEL.CSS
+=========================================================
+  ____                        _   
+ | __ )  ___  _   ___   _____| |_ 
+ |  _ \ / _ \| | | \ \ / / _ \ __|
+ | |_) | (_) | |_| |\ V /  __/ |_ 
+ |____/ \___/ \__,_| \_/ \___|\__|
+
+ * Innehåller CSS för bildspelet men det kan också finnas
+ * i filen carousel.css och i webapparna.
+ *
+ * Skapad av: Christer Hagman
+ * Copyright (C) 2022 Bouvet AB
+=========================================================
+*/
+
 .sv-bvBildSpel {
     width: 980px;
     background: red;
@@ -7,8 +25,8 @@
     width: 100% !important;
     align-items: center;
     margin: 0px auto;
-    display:block; 
-    justify-content:center; 
+    display: block;
+    justify-content: center;
     max-width: 100vw !important;
 }
 
@@ -162,14 +180,13 @@
     margin-top: -265px;
 }
 
-
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
     .sv-grid-958px .sv-row [class*="sv-column-"].car-onboard.carousel {
         height: 100vh;
     }
     .car-onboard {
         height: 90vh;
-    }  
+    }
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
@@ -179,11 +196,9 @@
     .car-onboard {
         height: auto;
     }
-    
     .slick-list {
         height: auto;
     }
-   
     .car-onboard.slick-slider .slick-slide {
         height: auto;
     }
@@ -198,7 +213,7 @@
     }
     .car-onboard {
         height: 80vh;
-    }       
+    }
 }
 
 
@@ -211,12 +226,9 @@
     .car-onboard {
         height: auto;
     }
-
-    
     .slick-list {
         height: auto;
     }
-   
     .car-onboard.slick-slider .slick-slide {
         height: auto;
     }
@@ -232,7 +244,6 @@
     .car-onboard {
         height: 80vh;
     }
-   
     .car-onboard.slick-slider .slick-slide {
         height: 80vh;
     }
@@ -254,8 +265,6 @@
     .slick-list {
         height: auto;
     }
-    
-
     .car-onboard.slick-slider .slick-slide {
         height: auto;
     }
@@ -271,7 +280,6 @@
     .car-onboard {
         height: 80vh;
     }
-
     .car-onboard.slick-slider .slick-slide {
         height: 80vh;
     }
@@ -293,24 +301,20 @@
     .slick-list {
         height: auto;
     }
-    
     .car-onboard.slick-slider .slick-slide {
         height: auto;
     }
 }
 
 @media all and (max-width: 767px) {
-
-   .changeBackground .changeBackground.padding-bottom .car-onboard.carousel.slick-slider .slick-list.draggable {
-    padding-right: 0 !Important;
-    padding-left: 0 !Important;
-    }   
-
+    .changeBackground .changeBackground.padding-bottom .car-onboard.carousel.slick-slider .slick-list.draggable {
+        padding-right: 0 !Important;
+        padding-left: 0 !Important;
+    }
     .sv-template-tom-mall-utan-footer-inloggad .changeBackground .changeBackground .car-onboard .draggable .slick-track .sv-bv-bildpuff {
         height: 100% !Important;
         margin-bottom: 1.2em;
     }
-    
     .car-onboard .wrapper {
         padding-top: 1.5em;
     }
@@ -356,11 +360,9 @@
         margin-bottom: 5px !important;
         padding-bottom: 0;
     }
-  
     .car-onboard .slick-track {
         display: flex;
     }
-   
     .car-onboard.slick-slider .slick-slide div[data-cid] {
         height: 100%;
     }
@@ -387,7 +389,6 @@
     .slick-list {
         height: auto;
     }
-  
     .car-onboard.slick-slider .slick-slide {
         height: auto;
     }
@@ -397,5 +398,4 @@
     .sv-grid-958px .sv-row *[class*='sv-column-'].carousel {
         width: 100% !important
     }
-    
 }
