Repositioning of the back-arrow 2.

--- a/main.css
+++ b/main.css
@@ -1524,7 +1524,7 @@ input[type="submit"] {
         text-align: center;
         flex-grow: 1;
     }
-    .image-portlet a img.sv-noborder {
+    .sv-image-portlet a img.sv-noborder {
         padding-top: 0.9em;
     }
     .contactbox img {
