--- a/main.css
+++ b/main.css
@@ -1773,6 +1773,9 @@ input[type="submit"] {
     .sv-font-black-bold-24pt {
         font-size: 1.1em;
     }
+    .sv-font-dark-demibold-14pt {
+        font-size: 1em;
+    }
     .loginpage {
         padding-left: 2em;
     }
