--- a/main.css
+++ b/main.css
@@ -15,6 +15,18 @@ MAIN.CSS
 =========================================================
 */
 
+#customContactFormSubmit_model_category {
+    margin-bottom: 40px;
+}
+
+#customContactFormSubmit_model_message {
+    margin-bottom: 20px;
+}
+
+.sv-customcontactform-portlet #nol_contactForm.nol_Body .portletCustomMainFont #customContactFormSubmit e#contactFormTable tr td.select {
+    padding: 0;
+}
+
 .sv-layout.sv-skip-spacer.sv-column-10.sv-template-layout .sv-text-portlet .sv-text-portlet-content p {
     margin-top: -20px;
 }
