--- a/main.css
+++ b/main.css
@@ -15,6 +15,14 @@ MAIN.CSS
 =========================================================
 */
 
+#welcome-page-blue-button .go-to-offers {
+    margin: 0;
+}
+
+#welcome-page-blue-button .sv-text-portlet-content {
+    padding: 0.7em 4em;
+}
+
 .sv-Save-Email-and-Phone #email-and-phone-main #email-and-phone .remove-left-margin {
     margin-left: 0;
     display: flex;
@@ -489,7 +497,6 @@ body a:hover {
 }
 
 .btn-big p {
-    padding: 0;
     margin: 0;
 }
 
