--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ MAIN.CSS
 .sv-Save-Email-and-Phone #email-and-phone-main #email-and-phone .remove-left-margin #btnNext {
     margin-left: auto;
     margin-right: auto;
-    padding: 0.5em 0.9em 0.7em 0.9em !important;
+    padding: 0.4em 0.9em 0.7em 0.9em !important;
 }
 
 .sv-template-startpage .startpage .btn-blue.btn-center.btn-big p.sv-font-white-demibold-14pt {
@@ -50,9 +50,10 @@ MAIN.CSS
     padding: 0;
 }
 
-.sv-layout.sv-skip-spacer.sv-column-10.sv-template-layout .sv-text-portlet .sv-text-portlet-content p {
+
+/* .sv-layout.sv-skip-spacer.sv-column-10.sv-template-layout .sv-text-portlet .sv-text-portlet-content p {
     margin-top: -20px;
-}
+} */
 
 .sv-template-tom-mall .page-head .main-nav .logo-concierge {
     position: inherit;
