--- a/main.css
+++ b/main.css
@@ -659,7 +659,7 @@ textarea::-webkit-scrollbar-thumb {
 }
 
 .booking-form {
-    padding: 3em;
+    padding: 0 3em;
 }
 
 .booking-form input[type="submit"] {
