--- a/OnBoarding.css
+++ b/OnBoarding.css
@@ -174,16 +174,17 @@ ONBOARDING.CSS
     background: url(https://conciergestage.stoppservice.com/images/18.1e536fcd1729dcc958540/1591865334445/arrow-instructions_white.png) no-repeat bottom right;
     background-size: 62px 72px;
     display: block;
-    height: 120px;
-    background-position: 238px 29px;
+    height: 150px;
+    background-position: 238px 60px;
     right: -60%;
     position: relative;
     overflow: visible;
     margin-right: auto;
     width: 280px;
     padding-right: 2em;
-    top: 46px;
+    top: 15px;
     text-align: right;
+    /* font-family: avenirmedium,sans-serif; */
 }
 
 .home-overlay .over2 {
@@ -191,12 +192,12 @@ ONBOARDING.CSS
     background-size: 62px 72px;
     display: block;
     width: 230px;
-    height: 125px;
-    background-position: top 51px left 1px;
+    height: 160px;
+    background-position: top 86px left 2px;
     overflow: auto;
     margin-left: 150px;
     position: relative;
-    top: 470px;
+    top: 300px;
     left: 30px;
     text-align: left;
     padding-left: 24px;
@@ -269,7 +270,8 @@ ONBOARDING.CSS
         position: absolute;
     }
     .home-overlay .over2 {
-        top: 475px;
+        top: 535px;
+        background-position: top 50px left 2px;
     }
     .home-overlay .over3 {
         background-position: top 55px left 0px;
@@ -286,6 +288,13 @@ ONBOARDING.CSS
     }
 }
 
+@media (max-width: 820px) {
+    .home-overlay .over2 {
+        top: 575px;
+        background-position: top 50px left 2px;
+    }
+}
+
 @media (max-width: 767px) {
     .home-overlay .over1 {
         background-size: 57px 60px;
@@ -293,8 +302,9 @@ ONBOARDING.CSS
     }
     .home-overlay .over2 {
         background-size: 57px 60px;
-        top: 584px;
-        width: 210px;
+        top: 515px;
+        width: 220px;
+        background-position: top 60px left 3px;
     }
     .home-overlay .over3 {
         background-size: 57px 60px;
@@ -328,9 +338,9 @@ ONBOARDING.CSS
 @media (max-width: 700px) {
     .home-overlay .over2 {
         left: 0px;
-        width: 190px;
-        top: 583px;
-        background-position: top 44px left 1px;
+        width: 200px;
+        top: 520px;
+        background-position: top 50px left 5px;
     }
     .home-overlay .over3 {
         left: 210px;
@@ -339,10 +349,10 @@ ONBOARDING.CSS
 
 @media (max-width: 670px) {
     .home-overlay .over2 {
-        width: 180px;
-        top: 585px;
+        width: 190px;
+        top: 524px;
         left: -30px;
-        background-position: top 40px left 1px;
+        background-position: top 50px left 5px;
     }
     .home-overlay .over3 {
         width: 180px;
@@ -358,6 +368,12 @@ ONBOARDING.CSS
 }
 
 @media (max-width: 650px) {
+    .home-overlay .over2 {
+        width: 190px;
+        top: 450px;
+        left: -30px;
+        background-position: top 50px left 5px;
+    }
     .home-overlay .over3 {
         left: 225px;
     }
@@ -388,7 +404,7 @@ ONBOARDING.CSS
     }
     .home-overlay .over2 {
         left: -60px;
-        top: 572px;
+        top: 440px;
     }
     .home-overlay .over3 {
         left: 270px;
@@ -397,7 +413,7 @@ ONBOARDING.CSS
 
 @media (max-width: 480px) {
     .home-overlay .over2 {
-        top: 525px;
+        top: 440px;
     }
 }
 
@@ -407,6 +423,12 @@ ONBOARDING.CSS
     }
     .home-overlay .over3 {
         left: 288px;
+    }
+}
+
+@media (max-width: 420px) {
+    .home-overlay .over2 {
+        top: 455px;
     }
 }
 
